--- a/src/client/index.html
+++ b/src/client/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Jogo Test</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,19 +15,9 @@
     <div id="chat">
       <input type="text" placeholder="chats.">
     </div>
-    <div id="menu">
-      M
-    </div>
-    <div id="debug">
-      Oi
-    </div>
+    <div id="menu"></div>
+    <div id="debug"></div>
   </div>
-  <script src="common.js"></script>
-  <script src="Game.js"></script>
-  <script src="Player.js"></script>
-  <script src="Camera.js"></script>
-  <script src="Keyboard.js"></script>
-  <script src="Map.js"></script>
-  <script src="script.js"></script>
+  <script src="<%= filename %>-min.js"></script>
 </body>
 </html>
